[package]
name = "usgs-data2csv"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1"
indicatif="0.16.2"
clap = { version = "3.0", features = ["derive"] }
string-join = "0.1.2"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
number_range = "0.3.0"
anyhow = "1.0.71"
